fix: fix tshirt z-index

--- a/components/ui/Tshirt/Tshirt.module.scss
+++ b/components/ui/Tshirt/Tshirt.module.scss
@@ -7,10 +7,10 @@
 
 .base {
     position: absolute;
+    z-index: -1;
 }
 
 .printImage {
     position: relative;
     top: 5rem;
-    z-index: 1;
 }
